--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,8 @@ DB_PASSWORD=password
 DB_NAME=annot_development
 PORT=3001
 CLIENT_ORIGIN=http://localhost:5173
+
+DOC_AI_PROJECT_ID=PLACEHOLDER
+DOC_AI_LOCATION=PLACEHOLDER
+DOC_AI_PROCESSOR_ID=PLACEHOLDER
+GOOGLE_APPLICATION_CREDENTIALS=PLACEHOLDER
