--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.2",
+    "@types/react-rnd": "^8.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
@@ -36,6 +39,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-static-copy": "^3.1.0"
   }
 }
