--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,14 @@ services:
 
   api:
     build: ./server
+    platform: linux/amd64
     container_name: annot-api
     env_file: [ ./server/.env ]
-    volumes: [ ./server:/app ]
+    volumes: 
+      - ./server:/app
+      - ~/.config/gcloud/application_default_credentials.json:/root/.config/gcloud/application_default_credentials.json:ro
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/root/.config/gcloud/application_default_credentials.json
     ports: [ "3001:3001" ]
     depends_on: [ db ]
 
