--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       MYSQL_USER: rails
       MYSQL_PASSWORD: password
     volumes: [ db-data:/var/lib/mysql ]
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "rails", "-ppassword"]
+      timeout: 20s
+      retries: 10
+      interval: 5s
+      start_period: 30s
 
   api:
     build: ./server
@@ -23,7 +29,10 @@ services:
     environment:
       - GOOGLE_APPLICATION_CREDENTIALS=/root/.config/gcloud/application_default_credentials.json
     ports: [ "3001:3001" ]
-    depends_on: [ db ]
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
 
   web:
     build: ./client
