--- a/server/.gitignore
+++ b/server/.gitignore
@@ -32,3 +32,55 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Cache directory for Google Document AI responses
+/cache/
+cache/
+*.cache
+
+# Ignore temporary files
+tmp/
+temp/
+
+# Ignore log files
+*.log
+log/
+
+# Ignore uploaded files
+uploads/
+
+# Rails
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+
+# rspec failure tracking
+.rspec_status
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
