--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+*.cache
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +23,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Cache and temporary files
+.cache/
+cache/
+tmp/
+temp/
+
+# Uploaded files
+uploads/
+public/uploads/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
