--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,4 @@ CLIENT_ORIGIN=http://localhost:5173
 DOC_AI_PROJECT_ID=PLACEHOLDER
 DOC_AI_LOCATION=PLACEHOLDER
 DOC_AI_PROCESSOR_ID=PLACEHOLDER
+DOC_AI_CACHE_RESPONSE=true
