--- a/processor/requirements.txt
+++ b/processor/requirements.txt
@@ -1,10 +1,19 @@
-opencv-python==4.10.0.82
+# Modern document processing with Unstructured
+unstructured[pdf]==0.18.1
+
+# Core dependencies for visual field marking
+pdf2image==1.16.3
+pillow==10.0.1
+numpy==1.24.3
+opencv-python==4.8.1.78
+
+# Web server
+flask==2.3.3
+werkzeug==2.3.7
+
 pytesseract==0.3.10
 layoutparser==0.3.4
 boxdetect==1.0.2
-pdf2image==1.17.0
-pillow==10.3.0
-numpy==1.26.4
 click==8.1.7
 rich==13.7.1
 pytest==8.1.1
