--- a/server/Gemfile
+++ b/server/Gemfile
@@ -19,6 +19,9 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "rack-cors"
 gem "dotenv-rails"
 
+# HTTP client for processor service
+gem "httparty"
+
 # Google Document AI
 gem "google-cloud-document_ai"
 
