--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,5 @@ DOC_AI_PROJECT_ID=PLACEHOLDER
 DOC_AI_LOCATION=PLACEHOLDER
 DOC_AI_PROCESSOR_ID=PLACEHOLDER
 DOC_AI_CACHE_RESPONSE=true
+
+GEMINI_API_KEY=PLACEHOLDER
